<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:theme="@style/AlertDialog.AppCompat.Light"
    tools:context=".NewPlan">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:elevation="50dp"
        android:padding="10dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="6dp"
        card_view:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:padding="20dp">


            <EditText
                android:id="@+id/TripNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/beginUpdate"
                android:layout_marginLeft="10dp"
                android:hint="TripName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                />

            <EditText
                android:id="@+id/beginUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="Start"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                />

            <EditText
                android:id="@+id/destinationUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/startPosition"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="End"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/chooseDateUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dateBtn"
            android:textAllCaps="false"
            android:background="@drawable/shape"
            android:textColor="@color/white"

            />

        <TextView
            android:id="@+id/dateTextUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/date"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/chooseTimeUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/timeBtn"
            android:textAllCaps="false"
            android:background="@drawable/shape"
            android:textColor="@color/white"
            />

        <TextView
            android:id="@+id/timeTextUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/time"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_trip_type"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroupUpdated"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/single_trip"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/round"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_trip"
                android:textSize="18sp" />
        </RadioGroup>


    </LinearLayout>

    <Button
        android:id="@+id/updateInDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="Update"
        android:textAllCaps="false"
        android:background="@drawable/shape"
        android:textColor="@color/white"
        />

</LinearLayout>