<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    android:theme="@style/AlertDialog.AppCompat.Light"
    tools:context=".NewPlan">



    <android.support.v7.widget.CardView

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:elevation="50dp"
        android:padding="10dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="10dp"
        card_view:cardCornerRadius="15dp"



        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:orientation="vertical"
            android:padding="20dp">


            <EditText
                android:id="@+id/TripNameNew"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#fff"
                android:layout_above="@+id/startPosition"
                android:layout_marginLeft="10dp"
                android:hint="TripName" />

            <EditText

                android:id="@+id/startPosition"
                android:layout_width="match_parent"
                android:textColorHint="#fff"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="Start"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/destination"
                android:layout_width="match_parent"
                android:textColorHint="#fff"
                android:layout_height="wrap_content"
                android:layout_below="@+id/startPosition"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="End"
                android:textColor="@color/white" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"

        >

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#111"
            android:hint="@string/date"
            android:textSize="18sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/chooseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dateBtn"
            android:textAllCaps="false"
            android:background="@drawable/shape"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/timeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#111"
            android:gravity="center"
            android:hint="@string/time"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/chooseTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/timeBtn"
            android:textAllCaps="false"
            android:background="@drawable/shape"
            android:textColor="@color/white"

            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_trip_type"
            android:textSize="18sp"
            android:textStyle="bold"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radioGrp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/singleBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:checked="true"
            android:text="@string/single_trip"/>

        <RadioButton
            android:id="@+id/roundBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/round_trip"/>
    </RadioGroup>


    </LinearLayout>

    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Round trip name"
        android:visibility="gone"
        android:id="@+id/roundTripName"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:id="@+id/RoundChooserDate"
        android:weightSum="2">

        <TextView
            android:id="@+id/roundDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/date"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/roundDateImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/ic_date"
            android:text="@string/dateBtn"
            android:textAllCaps="false" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:id="@+id/RoundChooserTime"
        android:weightSum="2">

        <TextView
            android:id="@+id/roundTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="Your time is here"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/roundTimeImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:src="@drawable/ic_access_time_black_24dp"
            android:text="@string/dateBtn"
            android:textAllCaps="false" />

    </LinearLayout>

    <Button
        android:id="@+id/saveToDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:textColor="@color/white"
        android:text="Save"
        android:layout_marginTop="15dp"
        android:textAllCaps="false"
        android:background="@drawable/shape"
        />

</LinearLayout>