<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:elevation="10dp"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/Linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <CheckBox
                android:id="@+id/checkFinished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginRight="5dp"
                android:buttonTint="@color/white"
                android:scaleX="1.2"
                android:scaleY="1.2"
                android:shadowColor="@color/white" />

            <TextView
                android:id="@+id/tripHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1.2"
                android:hint="@string/trip_name"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="italic"
                android:layout_marginRight="80dp"
                />

            <ImageView
                android:id="@+id/mapIconID"
                android:layout_width="50dp"
                android:layout_height="50dp"


                android:src="@drawable/mapicon" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorPrimary"
            >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"  >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        android:text="@string/startText"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_marginStart="5dp"

        />

    <TextView
        android:id="@+id/source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="80dp"
        android:layout_weight="1.2"

        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="italic" />



</LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"  >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:text="@string/endText"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_marginStart="5dp"

                />


            <TextView
                android:id="@+id/destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text=""

                android:layout_weight="1.2"

                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="italic"
                android:layout_marginRight="80dp"
                />


        </LinearLayout>





        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>
